--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="tab intro">
-        <h2 class="animation-show">Lu Dev</h2>
+        <h2 class="animation-show">Mcwane</h2>
         <img src="img/logo2.jpg" alt="" class="animation-show">
         <p class="animation-show">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rem obcaecati libero eaque veniam est necessitatibus consectetur commodi non rerum, sapiente distinctio dignissimos! Dolorem eaque velit quam tenetur sapiente, qui veniam iste beatae officiis facilis aut expedita commodi, voluptatibus ullam voluptates! Explicabo, nisi. Odit, neque aliquid maiores minima cumque iusto?
