--- a/index.html
+++ b/index.html
@@ -27,24 +27,55 @@
         <p class="animation-show">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rem obcaecati libero eaque veniam est necessitatibus consectetur commodi non rerum, sapiente distinctio dignissimos! Dolorem eaque velit quam tenetur sapiente, qui veniam iste beatae officiis facilis aut expedita commodi, voluptatibus ullam voluptates! Explicabo, nisi. Odit, neque aliquid maiores minima cumque iusto?
         </p>
-        <button class="animation-show">Subcribe</button>
+        <a href="https://www.youtube.com/user/mcwanecorp" class="animation-show button-link" target="_blank" rel="noopener noreferrer">Subscribe</a>
+
+        <!-- New Section for Tables -->
+        <div class="shortlisted">
+            <table>
+                <caption>Carrom Shortlisted Players</caption>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>Ajith Kumar</td></tr>
+                    <tr><td>Manokaran</td></tr>
+                    <tr><td>Gnanaprakesh</td></tr>
+                    <tr><td>Prakesh</td></tr>
+                </tbody>
+            </table>
+        
+            <table>
+                <caption>Chess Shortlisted Players</caption>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>Ajith Kumar</td></tr>
+                    <tr><td>Prakesh</td></tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div class="tab library">
         <div class="animation-show">
-            <img src="img/9.jpg">
+            <img src="img/carrom.jpg">
             <p>Image Name</p>
         </div>
         <div class="animation-show">
-            <img src="img/10.jpg">
+            <img src="img/chess.avif">
             <p>Image Name</p>
         </div>
         <div class="animation-show">
-            <img src="img/11.jpg">
+            <img src="img/cricket.jpg">
             <p>Image Name</p>
         </div>
         <div class="animation-show">
-            <img src="img/12.jpg">
+            <img src="img/football.jpg">
             <p>Image Name</p>
         </div>
     </div>
