--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
     <div class="tab library">
         <div class="animation-show">
             <img src="img/carrom.jpg">
-            <p>Image Name</p>
+            <p>Carrom</p>
         </div>
         <div class="animation-show">
             <img src="img/chess.avif">
-            <p>Image Name</p>
+            <p>Chess</p>
         </div>
         <div class="animation-show">
             <img src="img/cricket.jpg">
-            <p>Image Name</p>
+            <p>Cricket</p>
         </div>
         <div class="animation-show">
             <img src="img/football.jpg">
-            <p>Image Name</p>
+            <p>football</p>
         </div>
     </div>
     <script src="app.js"></script>
