--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="animation-show">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rem obcaecati libero eaque veniam est necessitatibus consectetur commodi non rerum, sapiente distinctio dignissimos! Dolorem eaque velit quam tenetur sapiente, qui veniam iste beatae officiis facilis aut expedita commodi, voluptatibus ullam voluptates! Explicabo, nisi. Odit, neque aliquid maiores minima cumque iusto?
         </p>
-        <a href="https://www.youtube.com/user/mcwanecorp" class="animation-show button-link" target="_blank" rel="noopener noreferrer">Subscribe</a>
+        <a href="https://www.youtube.com/user/mcwanecorp" class="animation-show button-link" target="_blank" rel="noopener noreferrer">Our Motion Poster</a>
 
         <!-- New Section for Tables -->
         <div class="shortlisted">
