--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 class="animation-show">Mcwane</h2>
         <img src="img/logo3.jpg" alt="" class="animation-show">
         <p class="animation-show">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rem obcaecati libero eaque veniam est necessitatibus consectetur commodi non rerum, sapiente distinctio dignissimos! Dolorem eaque velit quam tenetur sapiente, qui veniam iste beatae officiis facilis aut expedita commodi, voluptatibus ullam voluptates! Explicabo, nisi. Odit, neque aliquid maiores minima cumque iusto?
+           Strength doesn’t come from what you can do; it comes from overcoming the things you once thought you couldn’t. McWane Titans, let’s overcome and conquer!
         </p>
         <a href="https://www.youtube.com/watch?v=NYnNZd5qOPY" class="animation-show button-link" target="_blank" rel="noopener noreferrer">Our Motion Poster</a>
 
