--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="tab intro">
         <h2 class="animation-show">Mcwane</h2>
-        <img src="img/logo3.jpg" alt="" class="animation-show">
+        <img src="img/logo3.png" alt="" class="animation-show">
         <p class="animation-show">
            Strength doesn’t come from what you can do; it comes from overcoming the things you once thought you couldn’t. McWane Titans, let’s overcome and conquer!
         </p>
